# A_star_pathfinding_opengl

./: .gitignore  CMakeLists.txt  README.md  fetch_deps.sh
include/: camera.hpp  file_utils.hpp  map.hpp  model.hpp  renderer.hpp  shader.hpp
res/shaders/: blur.frag  bw.frag  bw.vert  hdr.frag  light_cube.frag  light_cube.vert  portal.frag  portal.vert  reflective.frag  reflective.vert  shader.frag  shader.vert  shader_color.frag  shader_texture.frag  skybox.frag  skybox.vert  static_mesh.frag  static_mesh.vert
src/: main.cpp  model.cpp  renderer.cpp
